--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "rakeR"]
+	path = rakeR
+	url = https://github.com/philmikejones/raker
+	shallow = true
+	registered = true
+[submodule "trigpoints"]
+	path = trigpoints
+	url = https://github.com/philmikejones/trigpoints
+	shallow = true
+	registered = true
